Changed ID URI 2

--- a/index.html
+++ b/index.html
@@ -563,9 +563,9 @@ window.pdfMake = window.pdfMake || {}; window.pdfMake.vfs = {"LICENSE.txt":"DQog
           new AhaApi({
             accountDomain: $("#subdomain").val(),
             // Replace this with your client ID.
-            clientId: "40ef2780c34d53137c122cf026cac020258a5884ba791dd25f56cd9007d9bd53", 
+            clientId: "f5bc99e0ae866bc03dd5a49b7bcb0ff3a2686eb216c2b339aa4dd1f44688efd2", 
             // Replace this with your redirect URL.
-            redirectUri: "https://dl.dropboxusercontent.com/s/1mfpb2sve729brz/requirements.html"
+            redirectUri: "https://w1-scheffersdylan.github.io/"
           }).authenticate(function(api, success, message) {
             var productKey = $("#product-key").val();
             var sprintNumber = $("#sprintNumber").val();
