--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ window.pdfMake = window.pdfMake || {}; window.pdfMake.vfs = {"LICENSE.txt":"DQog
                       
             
              // show data of story
-             document.write('<img src="http://sablono.com/web/file/sablono_logo.svg" style="position: absolute; top: 25px; right: 25px; width: 20%;" /><p><input type="submit" class="btn right" id="btnOpenPDF" value="Open story as PDF"></input> <input type="submit" class="btn right" id="btnSavePDF" value="Save story as PDF"></input></p><p><input type="submit" class="btn right" id="btnNewStory" value="New story"></input></p>');
+             document.write('<img src="./images/sablonoLogo.png" style="position: absolute; top: 25px; right: 25px; width: 20%;" /><p><input type="submit" class="btn right" id="btnOpenPDF" value="Open story as PDF"></input> <input type="submit" class="btn right" id="btnSavePDF" value="Save story as PDF"></input></p><p><input type="submit" class="btn right" id="btnNewStory" value="New story"></input></p>');
             document.write("<h2>Story details</h2>");
 
               document.write("<table>");
