--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ window.pdfMake = window.pdfMake || {}; window.pdfMake.vfs = {"LICENSE.txt":"DQog
     
 <!--STEP 1 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->    
   <!-- input fields to show story -->
-    <img src="http://sablono.com/web/file/sablono_logo.svg" class="sablonoLogo"/>
+    <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
     <div id="storyDiv">
       <h1>Story</h1>
       <p> Please fill in a story number. </p>
