--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
 
     <!-- PDFmake -->
     <script src="./js/pdfmake.min.js"></script>
-
-
+    <script src="./js/vfs_fonts.js"></script>
 
     <!-- controller -->
     <script src="./js/controller.js"></script>
