changed some names

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="requirementsApp">
+<html ng-app="ahapdfApp">
   <head>
     <title>Aha! user story to PDF</title>
     <!-- angularjs matrial css -->
