--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   </head>
   <body ng-controller="homeController">
-    
+    <div id="successContainer"></div>
   <!-- input fields to show story -->
     <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
     <div id="storyDiv">
