--- a/index.html
+++ b/index.html
@@ -13,71 +13,130 @@
 
   </head>
   <body ng-controller="homeController">
-    <div id="successContainer"></div>
-  <!-- input fields to show story -->
-    <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
-    <div id="storyDiv">
-      <h1>Story</h1>
-      <p> Please fill in a story number. </p>
-      <form id="controls">
-        <table>
-          <tr>
-            <!--<td>Aha! subdomain </td>-->
-            <td><input type="text" placeholder="Aha! subdomain" id="subdomain" value="sablono" disabled></input></td>
-          </tr>
-          <tr>
-            <!--<td>Product key </td>-->
-            <td><input type="text" placeholder="Product key" id="product-key" value="WEB" disabled></input></td>
-          </tr>
-          <tr>
-            <!--<td>Story Number  </td> -->
-            <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-313"></input></td>
-            <!--<td><md-button class="md-raised right" type="button" id="changeStoryNumberNOW">Change WEB to NOW</md-button><md-button type="button" class="btn right" id="changeStoryNumberWEB" style="display: none">Change NOW to WEB</md-button></td>-->
-            <td><md-button class="md-raised md-primary right" type="submit">Show story</md-button></td>
-         <!-- </tr>
-           <tr>
-            <td></td>
-            <td><md-button class="md-raised md-primary right" type="submit">Show story</md-button></td>
-          </tr> -->
-        </table>
-      </form>
-    </div>
+    
+  <div id="step1Container">
+      <!-- input fields to show story -->
+      <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
+      <div id="storyDiv">
+        <h1>Story</h1>
+        <p> Please fill in a story number. </p>
+        <form id="controls">
+          <table>
+            <tr>
+              <!--<td>Aha! subdomain </td>-->
+              <td><input type="text" placeholder="Aha! subdomain" id="subdomain" value="sablono" disabled></input></td>
+            </tr>
+            <tr>
+              <!--<td>Product key </td>-->
+              <td><input type="text" placeholder="Product key" id="product-key" value="WEB" disabled></input></td>
+            </tr>
+            <tr>
+              <!--<td>Story Number  </td> -->
+              <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-313"></input></td>
+              <!--<td><md-button class="md-raised right" type="button" id="changeStoryNumberNOW">Change WEB to NOW</md-button><md-button type="button" class="btn right" id="changeStoryNumberWEB" style="display: none">Change NOW to WEB</md-button></td>-->
+              <td><md-button class="md-raised md-primary right" type="submit">Show story</md-button></td>
+           <!-- </tr>
+             <tr>
+              <td></td>
+              <td><md-button class="md-raised md-primary right" type="submit">Show story</md-button></td>
+            </tr> -->
+          </table>
+        </form>
+      </div>
 
-    <div id="sprintDiv">
-      <hr/>
-      <!-- input fields to show sprint -->
-      <form id="controlsSprint">
-        <table>
-          <tr>
-            <th>
-              Sprint
-            </th>
-            <th>
-              (UNDER CONSTRUCTION)
-            </th>
-          </tr>
-          <tr>
-            <td>Aha! subdomain </td>
-            <td><input type="text" placeholder="Aha! subdomain" id="subdomain" value="sablono" disabled></input></td>
-          </tr>
-          <tr>
-            <td>Product key </td>
-            <td><input type="text" placeholder="Product key" id="product-key" value="WEB" disabled></input></td>
-          </tr>
-          <tr>
-            <td>Sprint Number  </td>
-            <td><input type="text" placeholder="Story number" id="sprintNumber" value="WEB-R-30"></input></td>
-            <td><input type="button" class="btn right" id="changeStoryNumberNOWsprint" value="Change WEB to NOW"></input><input type="button" class="btn right" id="changeStoryNumberWEBsprint" value="Change NOW to WEB" style="display: none"></input></td>
-          </tr>
-           <tr>
-            <td></td>
-            <td><input type="submit" class="btn right" value="Show sprint"></input></td>
-          </tr>
-        </table>
-      </form>
-    </div>
+      <div id="sprintDiv">
+        <hr/>
+        <!-- input fields to show sprint -->
+        <form id="controlsSprint">
+          <table>
+            <tr>
+              <th>
+                Sprint
+              </th>
+              <th>
+                (UNDER CONSTRUCTION)
+              </th>
+            </tr>
+            <tr>
+              <td>Aha! subdomain </td>
+              <td><input type="text" placeholder="Aha! subdomain" id="subdomain" value="sablono" disabled></input></td>
+            </tr>
+            <tr>
+              <td>Product key </td>
+              <td><input type="text" placeholder="Product key" id="product-key" value="WEB" disabled></input></td>
+            </tr>
+            <tr>
+              <td>Sprint Number  </td>
+              <td><input type="text" placeholder="Story number" id="sprintNumber" value="WEB-R-30"></input></td>
+              <td><input type="button" class="btn right" id="changeStoryNumberNOWsprint" value="Change WEB to NOW"></input><input type="button" class="btn right" id="changeStoryNumberWEBsprint" value="Change NOW to WEB" style="display: none"></input></td>
+            </tr>
+             <tr>
+              <td></td>
+              <td><input type="submit" class="btn right" value="Show sprint"></input></td>
+            </tr>
+          </table>
+        </form>
+      </div>
+    </div> <!-- step 1 container -->
+
+    <div id="step2Container">
+
+    <table>
+      <tr>
+        <td>Story number:</td>
+        <td>(TICKET-ID)</td>
+        <td id="ticket-id"></td>
+      </tr>
+      <tr>
+        <td>Story name:</td>
+        <td>(TITLE)</td>
+        <td id="title"></td>
+      </tr>
+      <tr>
+        <td>Story grooming:</td>
+        <td>(GROOM)</td>
+        <td id="groom"></td>
+      </tr>
+      <tr>
+        <td>Story epic:</td>
+        <td>(EPIC)</td>
+        <td id="epic"></td>
+      </tr>
+      <tr>
+        <td>Story description:</td>
+        <td>(STORY)</td>
+        <td id="story"></td>
+      </tr>
+    </table>
 
 
+    document.write('<img src="./images/sablonoLogo.png" style="position: absolute; top: 25px; right: 25px; width: 20%;" /><p><input type="submit" class="btn right" id="btnOpenPDF" value="OPEN story as PDF"></input> <input type="submit" class="btn right" id="btnSavePDF" value="SAVE story as PDF"></input></p><p><input type="submit" class="btn right" id="btnNewStory" value="New story"></input></p>');
+    document.write("<h2>Story details</h2>");
+
+      document.write("<table>");
+
+        document.write("<tr><td id='storynumberThing'>Story number:</td><td> (TICKET-ID)</td><td>");
+        document.write(storyDataNumber + "</td><tr/>");
+
+        document.write("<tr><td>Story name:</td><td> (TITLE)</td><td>");
+        document.write(storyDataName + "</td><tr/>");
+
+        document.write("<tr><td>Story grooming: </td><td> (GROOM)</td><td>");
+        document.write(storyDataGroom + "</td><tr/>");
+
+        document.write("<tr><td>Story epic:</td><td> (EPIC)</td><td>");
+        document.write(storyDataEpic + "</td><tr/>");
+
+        document.write("<tr><td>Story description:</td><td> (STORY)</td><td>");
+        document.write(storyDataDescription + "</td><tr/>");      
+
+      document.write("</table>");
+
+      document.write("<br />");
+
+      document.write('<p> <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input> <input type="submit" value="Add requirement" id="addRequirement"></input></p>')
+      
+    </div> <!-- step 2 container -->
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
