--- a/index.html
+++ b/index.html
@@ -82,7 +82,16 @@
     </div> <!-- step 1 container -->
 
     <div id="step2Container">
+    <p>
+      <input type="submit" class="btn right" id="btnOpenPDF" value="OPEN story as PDF"></input> 
+      <input type="submit" class="btn right" id="btnSavePDF" value="SAVE story as PDF"></input>
+    </p>
+    <p>
+      <input type="submit" class="btn right" id="btnNewStory" value="New story"></input>
+    </p>
 
+    <h2>Story details</h2>
+    
     <table>
       <tr>
         <td>Story number:</td>
