--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   </head>
   <body ng-controller="homeController">
-
+<md-card>
   <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
 
   <div id="step1Container">
@@ -91,7 +91,7 @@
     </p>
 
     <h2>Story details</h2>
-    
+
     <table>
       <tr>
         <td>Story number:</td>
@@ -127,6 +127,11 @@
     </p>
       
     </div> <!-- step 2 container -->
+
+
+
+
+</md-card>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
