--- a/index.html
+++ b/index.html
@@ -92,34 +92,41 @@
 
     <h2>Story details</h2>
 
-    <table>
-      <tr>
-        <td>Story number:</td>
-        <td>(TICKET-ID)</td>
-        <td id="ticket-id"></td>
-      </tr>
-      <tr>
-        <td>Story name:</td>
-        <td>(TITLE)</td>
-        <td id="title"></td>
-      </tr>
-      <tr>
-        <td>Story grooming:</td>
-        <td>(GROOM)</td>
-        <td id="groom"></td>
-      </tr>
-      <tr>
-        <td>Story epic:</td>
-        <td>(EPIC)</td>
-        <td id="epic"></td>
-      </tr>
-      <tr>
-        <td>Story description:</td>
-        <td>(STORY)</td>
-        <td id="story"></td>
-      </tr>
-    </table>
+    <p>
+      <table>
+        <tr>
+          <td>Story number:</td>
+          <td>(TICKET-ID)</td>
+          <td id="ticket-id"></td>
+        </tr>
+        <tr>
+          <td>Story name:</td>
+          <td>(TITLE)</td>
+          <td id="title"></td>
+        </tr>
+        <tr>
+          <td>Story grooming:</td>
+          <td>(GROOM)</td>
+          <td id="groom"></td>
+        </tr>
+        <tr>
+          <td>Story epic:</td>
+          <td>(EPIC)</td>
+          <td id="epic"></td>
+        </tr>
+        <tr>
+          <td>Story description:</td>
+          <td>(STORY)</td>
+          <td id="story"></td>
+        </tr>
+      </table>
+    </p>
 
+    <p>
+      <table id="requirementsTable">
+
+      </table>
+    </p>
 
     <p>
       <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
