--- a/index.html
+++ b/index.html
@@ -82,56 +82,57 @@
     </div> <!-- step 1 container -->
 
     <div id="step2Container">
-    <p>
-      <input type="submit" class="btn right" id="btnOpenPDF" value="OPEN story as PDF"></input> 
-      <input type="submit" class="btn right" id="btnSavePDF" value="SAVE story as PDF"></input>
-    </p>
-    <p>
-      <input type="submit" class="btn right" id="btnNewStory" value="New story"></input>
-    </p>
 
-    <h2>Story details</h2>
-    <br />
-    <p>
-      <table>
-        <tr>
-          <td>Story number:</td>
-          <td>(TICKET-ID)</td>
-          <td id="ticket-id"></td>
-        </tr>
-        <tr>
-          <td>Story name:</td>
-          <td>(TITLE)</td>
-          <td id="title"></td>
-        </tr>
-        <tr>
-          <td>Story grooming:</td>
-          <td>(GROOM)</td>
-          <td id="groom"></td>
-        </tr>
-        <tr>
-          <td>Story epic:</td>
-          <td>(EPIC)</td>
-          <td id="epic"></td>
-        </tr>
-        <tr>
-          <td>Story description:</td>
-          <td>(STORY)</td>
-          <td id="story"></td>
-        </tr>
-      </table>
-    </p>
+      <p>
+        <input type="submit" class="btn" id="btnOpenPDF" value="OPEN story as PDF"></input> 
+        <input type="submit" class="btn" id="btnSavePDF" value="SAVE story as PDF"></input>
+      </p>
+      <p>
+        <input type="submit" class="btn" id="btnNewStory" value="New story"></input>
+      </p>
 
-    <p>
-      <table id="requirementsTable">
+      <h2>Story details</h2>
+      <br />
+      <p>
+        <table>
+          <tr>
+            <td>Story number:</td>
+            <td>(TICKET-ID)</td>
+            <td id="ticket-id"></td>
+          </tr>
+          <tr>
+            <td>Story name:</td>
+            <td>(TITLE)</td>
+            <td id="title"></td>
+          </tr>
+          <tr>
+            <td>Story grooming:</td>
+            <td>(GROOM)</td>
+            <td id="groom"></td>
+          </tr>
+          <tr>
+            <td>Story epic:</td>
+            <td>(EPIC)</td>
+            <td id="epic"></td>
+          </tr>
+          <tr>
+            <td>Story description:</td>
+            <td>(STORY)</td>
+            <td id="story"></td>
+          </tr>
+        </table>
+      </p>
 
-      </table>
-    </p>
-    <br />
-    <p>
-      <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
-      <input type="submit" value="Add requirement" id="addRequirement"></input>
-    </p>
+      <p>
+        <table id="requirementsTable">
+
+        </table>
+      </p>
+      <br />
+      <p>
+        <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
+        <input type="submit" value="Add requirement" id="addRequirement"></input>
+      </p>
       
     </div> <!-- step 2 container -->
 
