--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
 
-  <div id="step1Container">
+  <div id="step1Container" class="paddingContainer">
       <!-- input fields to show story -->
       
       <div id="storyDiv">
@@ -81,7 +81,7 @@
       </div>
     </div> <!-- step 1 container -->
 
-    <div id="step2Container">
+    <div id="step2Container" class="paddingContainer">
 
       <p>
         <input type="submit" class="btn" id="btnOpenPDF" value="OPEN story as PDF"></input> 
