--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
     <div id="step2Container" class="paddingContainer">
 
       <p>
-        <input type="submit" class="btn" id="btnOpenPDF" value="OPEN story as PDF"></input> 
-        <input type="submit" class="btn" id="btnSavePDF" value="SAVE story as PDF"></input>
+        <md-button class="md-raised md-primary greenBtn" type="submit" id="btnOpenPDF">OPEN story as PDF</md-button> 
+        <md-button class="md-raised md-primary greenBtn" type="submit" id="btnSavePDF">SAVE story as PDF</md-button>
       </p>
       <br />
       <p>
-        <input type="submit" class="btn" id="btnNewStory" value="New story"></input>
+        <md-button class="md-raised md-primary orangeBtn" type="submit" id="btnNewStory">New story</md-button>
       </p>
       <br />
       <h2>Story details</h2>
@@ -132,7 +132,7 @@
       <br />
       <p>
         <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
-        <input type="submit" value="Add requirement" id="addRequirement"></input>
+        <md-button class="md-raised md-primary blueBtn" type="submit" id="addRequirement">Add requirement</md-button>
       </p>
       
     </div> <!-- step 2 container -->
