--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <!--<td>Story Number  </td> -->
               <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-313"></input></td>
               <!--<td><md-button class="md-raised right" type="button" id="changeStoryNumberNOW">Change WEB to NOW</md-button><md-button type="button" class="btn right" id="changeStoryNumberWEB" style="display: none">Change NOW to WEB</md-button></td>-->
-              <td><md-button class="md-raised md-primary right orangeBtn" type="submit">Show story</md-button></td>
+              <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show story</md-button></td>
            <!-- </tr>
              <tr>
               <td></td>
