--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
 
  
-
+    <!-- placed step2Container on the top, because of fade effect -->
     <div id="step2Container" class="paddingContainer">
 
       <p>
-        <md-button class="md-raised md-primary greenBtn" type="submit" id="btnOpenPDF">OPEN story as PDF</md-button> 
-        <md-button class="md-raised md-primary greenBtn" type="submit" id="btnSavePDF">SAVE story as PDF</md-button>
+        <md-button class="md-raised md-primary" type="submit" id="btnOpenPDF">OPEN story as PDF</md-button> 
+        <md-button class="md-raised md-primary" type="submit" id="btnSavePDF">SAVE story as PDF</md-button>
       </p>
       <br />
       <p>
-        <md-button class="md-raised md-primary orangeBtn" type="submit" id="btnNewStory">New story</md-button>
+        <md-button class="md-raised md-primary" type="submit" id="btnNewStory">New story</md-button>
       </p>
       <br />
       <h2>Story details</h2>
@@ -69,7 +69,7 @@
       <br />
       <p>
         <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
-        <md-button class="md-raised md-primary blueBtn" type="submit" id="addRequirement">Add requirement</md-button>
+        <md-button class="md-raised md-primary" type="submit" id="addRequirement">Add requirement</md-button>
       </p>
       
     </div> <!-- step 2 container -->
