--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>Story details</h2>
       <br />
       <p>
-        <table>
+        <table id="storyDataTable">
           <tr>
             <td>Story number:</td>
             <td>(TICKET-ID)</td>
@@ -61,11 +61,11 @@
         </table>
       </p>
 
-      <p>
+<!--       <p>
         <table id="requirementsTable">
 
         </table>
-      </p>
+      </p> -->
       <br />
       <p>
         <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
