--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <p>
         <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
         <md-button class="md-raised md-primary" type="submit" id="addRequirement">Add requirement</md-button>
-        <br />*The by hand added requirement would not be added to the Aha! user story requirements.
+        <br /><span class="infoText">*The by hand added requirement would not be added to the Aha! user story requirements.</span>
       </p>
       
     </div> <!-- step 2 container -->
