--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
       </div>
     </div> <!-- step 1 container -->
 
+
+
+    <iframe src="http://www.aha.io/" height="250" width="1000"></iframe>
+
+
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
