--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </tr>
             <tr>
               <!-- Product key -->
-              <td><input type="text" placeholder="Product key" id="product-key" value="WEB" disabled></input></td>
+              <td><input type="text" placeholder="Product key" id="product-key" value="WEB"></input></td>
             </tr>
             <tr>
               <!-- Story Number -->
