--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
       <p>
         <table id="storyDataTable">
           <tr>
-            <td>Story number:</td>
-            <td>(TICKET-ID)</td>
+            <!--<td>Story number:</td>-->
+            <td>Ticket-ID:</td>
             <td id="ticket-id"></td>
           </tr>
           <tr>
-            <td>Story name:</td>
-            <td>(TITLE)</td>
+            <!--<td>Story name:</td>-->
+            <td>Title:</td>
             <td id="title"></td>
           </tr>
           <tr>
-            <td>Story grooming:</td>
-            <td>(GROOM)</td>
+            <!--<td>Story grooming:</td>-->
+            <td>Groom:</td>
             <td id="groom"></td>
           </tr>
           <tr>
-            <td>Story epic:</td>
-            <td>(EPIC)</td>
+            <!--<td>Story epic:</td>-->
+            <td>Epic:</td>
             <td id="epic"></td>
           </tr>
           <tr>
-            <td>Story description:</td>
-            <td>(STORY)</td>
+            <!--<td>Story description:</td>-->
+            <td>Story</td>
             <td id="story"></td>
           </tr>
         </table>
