--- a/index.html
+++ b/index.html
@@ -80,7 +80,18 @@
             </tr>
             <tr>
               <!-- Product key -->
-              <td><input type="text" placeholder="Product key" id="product-key" value="WEB"></input></td>
+              <td><!--<input type="text" placeholder="Product key" id="product-key" value="WEB"></input>-->
+
+                  <md-input-container>
+                    <label>Product Key</label>
+                    <md-select ng-model="ctrl.userState">
+                      <md-option ng-repeat="state in ctrl.states" value="{{state.abbrev}}">
+                        {{state.abbrev}}
+                      </md-option>
+                    </md-select>
+                  </md-input-container>
+
+              </td>
             </tr>
             <tr>
               <!-- Story Number -->
