--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
                   <md-input-container>
                     <label>Product Key</label>
-                    <md-select ng-model="ctrl.userState">
-                      <md-option ng-repeat="state in ctrl.states" value="{{state.abbrev}}">
-                        {{state.abbrev}}
+                    <md-select ng-model="productKeys">
+                      <md-option ng-repeat="productkey in homeController.productKeys" value="{{productKey.name}}">
+                        {{productKey.name}}
                       </md-option>
                     </md-select>
                   </md-input-container>
