--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <md-input-container>
                     <label>Product Key</label>
                     <md-select ng-model="productKeys">
-                      <md-option ng-repeat="productKey in productKeys" value="{{productKey.name}}">
+                      <md-option ng-repeat="productKey in productKeys" value="{{productKeys.name}}">
                         {{productKey.name}}
                       </md-option>
                     </md-select>
