--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
               <td><!--<input type="text" placeholder="Product key" id="product-key" value="WEB"></input>-->
 
                   <md-input-container>
-                    <label>{{productKey.name}}</label>
-                    <md-select ng-model="productKeys">
-                      <md-option ng-repeat="productKey in productKeys" value="{{productKeys.name}}">
-                        {{productKey.name}}
-                      </md-option>
-                    </md-select>
+                    <label>State</label>
+                      <md-select ng-model="ctrl.userState">
+                        <md-option ng-repeat="state in ctrl.states" value="{{state.abbrev}}">
+                          {{state.abbrev}}
+                        </md-option>
+                      </md-select>
                   </md-input-container>
 
               </td>
