--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <td><!--<input type="text" placeholder="Product key" id="product-key" value="WEB"></input>-->
 
                   <md-input-container>
-                    <label>States</label>
+                    <label>Product Key</label>
                       <md-select ng-model="userState">
                         <md-option ng-repeat="state in states" value="{{state.abbrev}}">
                           {{state.abbrev}}
