--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
               <td><!--<input type="text" placeholder="Product key" id="product-key" value="WEB"></input>-->
 
                   <md-input-container>
-                   <!--  <label>Product Key</label> -->
+                    <label>{{state.abbrev}}</label>
                       <md-select ng-model="userState">
-                        <md-option ng-repeat="state in states" value="{{state.abbrev}}">
+                        <md-option ng-repeat="state in states" value="{{state.abbrev}}" >
                           {{state.abbrev}}
                         </md-option>
                       </md-select>
