--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             </tr>
             <tr>
               <!-- Product key -->
-              <td><!--<input type="text" placeholder="Product key" id="product-key" value="WEB"></input>-->
+              <!--<input type="text" placeholder="Product key" id="product-key" value="WEB"></input>-->
+              <!-- <td>
 
                   <md-input-container>
                     <label>Product Key</label>
@@ -91,7 +92,7 @@
                       </md-select>
                   </md-input-container>
 
-              </td>
+              </td> -->
             </tr>
             <tr>
               <!-- Story Number -->
