--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   </head>
   <body ng-controller="homeController">
-
-  <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
-
+  <a href="http://www.sablono.com">
+      <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
+  </a>
  
     <!-- placed step2Container on the top, because of fade effect -->
     <div id="step2Container" class="paddingContainer">
@@ -80,10 +80,8 @@
             </tr>
             <!-- Product key -->
             <!--<tr>
-              
               <!--<input type="text" placeholder="Product key" id="product-key" value="WEB"></input>-->
               <!-- <td>
-
                   <md-input-container>
                     <label>Product Key</label>
                       <md-select ng-model="userState">
@@ -92,7 +90,6 @@
                         </md-option>
                       </md-select>
                   </md-input-container>
-
               </td> 
             </tr>-->
             <tr>
