--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   </head>
   <body ng-controller="homeController">
-  <a href="http://www.sablono.com">
+  <a href="http://www.sablono.com" target="_blank">
       <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
   </a>
  
