--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
   </head>
   <body ng-controller="homeController">
-  <a href="http://www.sablono.com" target="_blank">
-      <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
-  </a>
+
+    <a href="http://www.sablono.com" target="_blank">
+        <img src="./images/sablonoLogo.png" class="sablonoLogo"/>
+    </a>
  
     <!-- placed step2Container on the top, because of fade effect -->
     <div id="step2Container" class="paddingContainer">
@@ -102,7 +103,7 @@
 
 
       <!-- NOT DONE -->
-      <!-- <div id="sprintDiv">
+      <div id="sprintDiv">
         <hr/>
         
         <form id="controlsSprint">
@@ -135,7 +136,7 @@
           </table>
         </form>
       </div>
-    </div>  --><!-- step 1 container -->
+    </div>  <!-- step 1 container -->
 
 
     <!-- jQuery -->
