--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- placed step2Container on the top, because of fade effect -->
     <div id="step2Container" class="paddingContainer">
       <p>
+        <md-button class="md-raised md-primary" type="submit" id="btnPrintPDF">PRINT story as PDF</md-button> 
         <md-button class="md-raised md-primary" type="submit" id="btnOpenPDF">OPEN story as PDF</md-button> 
         <md-button class="md-raised md-primary" type="submit" id="btnSavePDF">SAVE story as PDF</md-button>
       </p>
