--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
               <!-- Story Number -->
               <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-"></input></td>
               <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show story</md-button></td>
+            </tr>
+            <tr>
+              <td id="error"></td>
+            </tr>
           </table>
         </form>
       </div>
