--- a/index.html
+++ b/index.html
@@ -99,11 +99,9 @@
               <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-"></input></td>
               <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show story</md-button></td>
             </tr>
-            <tr>
-              <td id="error"></td>
-            </tr>
           </table>
         </form>
+        <p id="error"></p>
       </div>
 
 
