--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- favicon link -->
+    <link rel="shortcut icon" href="./images/favicon.png">
 
   </head>
   <body ng-controller="homeController">
