--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="ahapdfApp">
   <head>
-    <title>Aha! user story to PDF</title>
+    <title>Aha! user story to PDF -- Sablono GmbH</title>
     <!-- angularjs matrial css -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.0/angular-material.min.css">
 
