--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </tr>
           <tr>
             <!--<td>Story description:</td>-->
-            <td>Story</td>
+            <td>Story:</td>
             <td id="story"></td>
           </tr>
         </table>
