--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
               <th>
                 (UNDER CONSTRUCTION)
               </th>
+              <th>
+                Use the fancy user story to PDF feature, please :)
+              </th>
             </tr>
             <tr>
               <td>Aha! subdomain </td>
