--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </p>
       <br />
       <p>
-        <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
+        <input type="text" placeholder="Add requirement if not all requirements are found by the website" id="addRequirementValue"></input>
         <md-button class="md-raised md-primary" type="submit" id="addRequirement">Add requirement</md-button>
         <br /><span class="infoText">*The by hand added requirement would not be added to the Aha! user story requirements.</span>
       </p>
