--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </table>
       </p>
       <br />
-      <p>You can add a requirement by hand <br />if not all of the requirements were found by the website.</p>
+      <p>You can add a requirement by hand if not all <br />of the requirements were found by the website.</p>
       <p>
         <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
         <md-button class="md-raised md-primary" type="submit" id="addRequirement">Add requirement</md-button>
