--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
         </table>
       </p>
       <br />
-      <p>You can add a requirement by hand if not all <br />of the requirements were found by the website.</p>
+      
       <p>
         <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
         <md-button class="md-raised md-primary" type="submit" id="addRequirement">Add requirement</md-button>
         <br />
         <span class="infoText">*The by hand added requirement would not be added to the Aha! user story requirements.</span>
       </p>
+      <p>You can add a requirement by hand if not all of the requirements were found by the website.</p>
       
     </div> <!-- step 2 container -->
 
