--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
 
 
-      <div id="step1Container" class="paddingContainer">
+      <div id="sprintDiv" class="paddingContainer">
       <hr/>
       <!-- input fields to show story -->
       <div id="controlsSprint">
@@ -146,7 +146,7 @@
           </form>
       </div>
 
-      <!-- NOT DONE -->
+      <!-- NOT DONE -
       <div id="sprintDiv">
         <hr/>
         
@@ -177,7 +177,7 @@
           </table>
         </form>
       </div>
-    </div>  <!-- step 1 container -->
+    </div> -> <!-- step 1 container -->
 
 
     <!-- jQuery -->
