--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
 
 
-      <div id="sprintDiv" class="paddingContainer">
+      <div id="sprintDiv">
       <hr/>
       <!-- input fields to show story -->
       <div id="controlsSprint">
