--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <!-- input fields to show story -->
       <div id="controlsSprint">
           <h1>Sprint</h1>
-          <p> Please fill in a Sprint number. </p>
+          <p> Please fill in a sprint number. </p>
           <form id="controls">
             <table>
               <tr>
@@ -138,7 +138,7 @@
               <tr>
                 <!-- Story Number -->
                 <td><input type="text" placeholder="Sprint number" id="sprintNumber" value="WEB-R-42"></input></td>
-                <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show story</md-button></td>
+                <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show sprint</md-button></td>
 
               </tr>
             </table>
