--- a/index.html
+++ b/index.html
@@ -87,36 +87,10 @@
         <md-button class="md-raised md-primary" type="submit" class="btnNewStory">New story</md-button>
       </p>
       <br />
-      <h2>Story details</h2>
+      <h2>Sprint details</h2>
       <br />
-      <p>
-        <table id="storyDataTable">
-          <tr>
-            <!--<td>Story number:</td>-->
-            <td>Ticket-ID:</td>
-            <td id="ticket-id"></td>
-          </tr>
-          <tr>
-            <!--<td>Story name:</td>-->
-            <td>Title:</td>
-            <td id="title"></td>
-          </tr>
-          <tr>
-            <!--<td>Story grooming:</td>-->
-            <td>Groom:</td>
-            <td id="groom"></td>
-          </tr>
-          <tr>
-            <!--<td>Story epic:</td>-->
-            <td>Epic:</td>
-            <td id="epic"></td>
-          </tr>
-          <tr>
-            <!--<td>Story description:</td>-->
-            <td>Story:</td>
-            <td id="story"></td>
-          </tr>
-        </table>
+      <p id="sprintDetails">
+        
       </p>
       <br />
       
