--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
       </p>
       <br />
       <p>
-        <md-button class="md-raised md-primary" type="submit" class="btnNewStory">New story</md-button>
+        <md-button class="md-raised md-primary" type="submit" class="btnNewStory">New sprint</md-button>
       </p>
       <br />
       <h2>Sprint details</h2>
       <br />
-      <p id="sprintDetails">
-        
+      <p >
+        <table id="sprintDetails">
+        </table>
       </p>
       <br />
       
