--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </p>
       <br />
       <p>
-        <md-button class="md-raised md-primary" type="submit" class="btnNewStory">New story</md-button>
+        <md-button class="md-raised md-primary" type="submit" id="btnNewStory">New story</md-button>
       </p>
       <br />
       <h2>Story details</h2>
@@ -84,7 +84,7 @@
       </p>
       <br />
       <p>
-        <md-button class="md-raised md-primary" type="submit" class="btnNewStory">New sprint</md-button>
+        <md-button class="md-raised md-primary" type="submit" id="btnNewSprint">New sprint</md-button>
       </p>
       <br />
       <h2>Sprint details</h2>
