--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       <p >
         <table id="sprintDetails">
         </table>
+        <table id="requirementsDetails">
+
+        </table>
       </p>
       <br />
       
