--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         </table>
       </p>
-      <br />
+     <!--  <br />
       
       <p>
         <input type="text" placeholder="Add requirement by hand to PDF" id="addRequirementValue"></input>
@@ -105,7 +105,7 @@
         <span class="infoText">*The by hand added requirement would not be added to the Aha! user story requirements.</span>
       </p>
       <br />
-      <p>You can add a requirement by hand if not all of the requirements were found by the website.</p>
+      <p>You can add a requirement by hand if not all of the requirements were found by the website.</p> -->
       
     </div> <!-- sprint step 2 container -->
 
