--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               </tr>-->
               <tr>
                 <!-- Story Number -->
-                <td><input type="text" placeholder="Sprint number" id="sprintNumber" value="WEB-R-47"></input></td>
+                <td><input type="text" placeholder="Sprint number" id="sprintNumber" value="WEB-R-"></input></td>
                 <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show sprint</md-button></td>
 
               </tr>
