--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <!-- input fields to show story -->
       <div id="controlsSprint">
           <h1>Sprint</h1>
-          <p> Please fill in a sprint number. </p>
+          <p> Please fill in a sprint number. See url in Aha! for the sprint number.</p>
           <form id="controls">
             <table>
               <tr>
