--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <!-- placed sprintstep2Container on the top, because of fade effect -->
     <div id="sprintstep2Container" class="paddingContainer">
       <p>
-        <md-button class="md-raised md-primary" type="submit" id="btnPrintPDFSprint">PRINT story as PDF</md-button> 
-        <md-button class="md-raised md-primary" type="submit" id="btnOpenPDFSprint">OPEN story as PDF</md-button> 
-        <md-button class="md-raised md-primary" type="submit" id="btnSavePDFSprint">SAVE story as PDF</md-button>
+        <md-button class="md-raised md-primary" type="submit" id="btnPrintPDFSprint">PRINT sprint as PDF</md-button> 
+        <md-button class="md-raised md-primary" type="submit" id="btnOpenPDFSprint">OPEN sprint as PDF</md-button> 
+        <md-button class="md-raised md-primary" type="submit" id="btnSavePDFSprint">SAVE sprint as PDF</md-button>
       </p>
       <br />
       <p>
