--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </tr>-->
             <tr>
               <!-- Story Number -->
-              <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-372"></input></td>
+              <td><input type="text" placeholder="Story number" id="storyNumber" value="WEB-"></input></td>
               <td><md-button class="md-raised md-primary right orangeBtn" id="btnShowStory" type="submit">Show story</md-button></td>
             </tr>
           </table>
