--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <md-button class="md-raised md-primary" type="submit" id="btnOpenPDF">OPEN story as PDF</md-button> 
         <md-button class="md-raised md-primary" type="submit" id="btnSavePDF">SAVE story as PDF</md-button>
       </p>
+      <p id="creatingTime">
+      </p>
       <br />
       <p>
         <md-button class="md-raised md-primary" type="submit" id="btnNewStory">New story</md-button>
