--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <table id="requirementsDetails">
         </table>
       </p>
-      <md-progress-linear md-mode="determinate" value="{{vm.determinateValue}}"></md-progress-linear>
+      <md-progress-linear md-mode="determinate" value="{{homeController.determinateValue}}"></md-progress-linear>
     </div> <!-- sprint step 2 container -->
 
 
