--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         <table id="requirementsDetails">
         </table>
       </p>
-      <md-progress-linear md-mode="determinate" value="{{homeController.determinateValue}}"></md-progress-linear>
+      <div layout="row" layout-sm="column" layout-align="space-around">
+        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+      </div>
     </div> <!-- sprint step 2 container -->
 
 
