--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <br />
       <h2>Sprint details</h2>
       <br />
-      <p >
+      <p class="overlap">
         <!-- this table is filled in when you have chosen a Sprint number -->
         <table id="requirementsDetails">
         </table>
