--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       <br />
       <h2>Sprint details</h2>
       <br />
-      <p class="overlap">
+      <p>
         <!-- this table is filled in when you have chosen a Sprint number -->
-        <table id="requirementsDetails">
+        <table id="requirementsDetails" class="overlap">
         </table>
       </p>
       <div layout="row" layout-sm="column" layout-align="space-around">
