--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
         <table id="requirementsDetails" class="overlap">
         </table>
       </p>
-      <div layout="row" layout-sm="column" layout-align="space-around">
-        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-      </div>
+      <md-progress-linear md-mode="determinate" value="{{homeController.determinateValue}}"></md-progress-linear>
     </div> <!-- sprint step 2 container -->
 
 
