--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <table id="requirementsDetails" class="overlap">
         </table>
       </p>
-      <md-progress-linear ng-if="ctrl.loading" md-mode='indeterminate'></md-progress-linear>
+      <md-progress-linear ng-if="homeController.loading" md-mode='indeterminate'></md-progress-linear>
     </div> <!-- sprint step 2 container -->
 
 
