--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
       <br />
       <h2>Sprint details</h2>
       <br />
-      <p>
+      <p >
         <!-- this table is filled in when you have chosen a Sprint number -->
-        <table id="requirementsDetails" class="overlap">
+        <table id="requirementsDetails">
         </table>
       </p>
-      <md-progress-linear ng-if="ctrl.loading" md-mode='indeterminate'></md-progress-linear>
     </div> <!-- sprint step 2 container -->
 
 
