--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <h2>Sprint details</h2>
       <br />
       <p class="loadingIndicator">
-        <md-progress-circular md-mode="determinate" value="{{vm.determinateValue}}"></md-progress-circular>
+        <md-progress-circular md-mode="determinate" value="{{homeController.determinateValue}}"></md-progress-circular>
       </p>
       <!-- this table is filled in when you have chosen a Sprint number -->
       <table id="requirementsDetails">
