--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
       <br />
       <h2>Sprint details</h2>
       <br />
-      <p class="loadingIndicator">
+      <div class="loadingIndicator">
          <div layout="row" layout-sm="column" layout-align="space-around">
             <md-progress-circular md-mode="indeterminate"></md-progress-circular>
           </div>
-      </p>
+      </div>
       <!-- this table is filled in when you have chosen a Sprint number -->
       <table id="requirementsDetails">
       </table>
