--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <br />
       <h2>Story details</h2>
       <br />
-      <p>
+      <md-card>
         <!-- this table is filled in if you typed in a story number -->
         <table id="storyDataTable">
           <tr>
@@ -57,7 +57,7 @@
             <td id="story"></td>
           </tr>
         </table>
-      </p>
+      </md-card>
     </div> <!-- step 2 container -->
 
 
